--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -7,6 +7,9 @@
 
 
 <div class="container">
+    <div class="col-12 mb-5">
+        <a class="btn btn-outline-primary" href="{% url 'catalog:product_create' %}">Добавить продукт</a>
+    </div>
     <div class="row text-center">
         {% for product in object_list %}
         <div class="col-3">
@@ -15,14 +18,14 @@
                     <h2>{{ product.name }}</h2>
                 </div>
                 <div class="card-body">
-                    <h1 class="card-title pricing-card-title">{{ product.price }}р</h1>
-                    <ul class="list-unstyled mt-3 mb-4 text-start m-3">
-                        <li>- {{ product.description }}</li>
-                    </ul>
+                    <p>Номер версии: <b>{{ product.active_version_number }}</b></p>
+                    <p>Название версии: <b>{{ product.active_version_name }}</b></p>
                     <a href="{% url 'catalog:product_details' product.pk %}" class="btn mt-auto btn-outline-danger">Детали</a>
+                    <a href="{% url 'catalog:product_update' product.pk %}" class="btn mt-auto btn-outline-danger">Исправить</a>
+                    <a href="{% url 'catalog:product_delete' product.pk %}" class="btn mt-auto btn-outline-danger">Удалить</a>
                 </div>
             </div>
         </div>
         {% endfor %}
     </div>
-{% endblock %}
+    {% endblock %}
