--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -20,7 +20,7 @@
 {% block content %}
 {% endblock %}
 
-<footer class="pt-4 my-md-5 pt-md-5 border-top">
+<footer class="pt-4 my-md-5 pt-md-5 border-top text-center">
     <div class="row">
         <div class="col-12 col-md">
             SkyStore
