--- a/catalog/templates/catalog/includes/inc_main_menu.html
+++ b/catalog/templates/catalog/includes/inc_main_menu.html
@@ -4,5 +4,12 @@
         <a class="p-2 btn btn-outline-primary" href="/">Каталог</a>
         <a class="p-2 btn btn-outline-primary" href="/blog">Блог</a>
         <a class="p-2 btn btn-outline-primary" href="{% url 'catalog:contacts' %}">Контакты</a>
+        {% if user.is_authenticated %}
+            <a class="p-2 btn btn-outline-primary" href="{% url 'users:profile' %}">Мой профиль</a></li>
+            <a class="p-2 btn btn-outline-primary" href="{% url 'users:logout' %}">Выйти</a></li>
+        {% else %}
+            <a class="p-2 btn btn-outline-primary" href="{% url 'users:login' %}">Войти</a></li>
+            <a class="p-2 btn btn-outline-primary" href="{% url 'users:register' %}">Регистрация</a></li>
+        {% endif %}
     </nav>
 </div>
